syntax = "proto3";

package ChatsApp.group;

import "common.proto";


message LoadMessageRequest {
    ChatsApp.common.MessageUser requester = 1;  
    int32 groupid = 2;                        
}

message LoadMessageResponse {
    repeated ChatsApp.common.MessageUser senders = 1;    
    repeated string messages = 2;                        
    repeated string timestamps = 3;                      
}


message SendMessageRequest {
    ChatsApp.common.MessageUser sender = 1;
    int32 groupid = 2;
    string content = 3;                                 
    optional string client_id = 4;                     
}


message SendMessageResponse {
    ChatsApp.common.MessageStatus status = 1;
    string groupid = 2;                               
    string timestamp = 3;                               
}
message ReceiveMessageRequest {
    int32 groupid = 1;
    optional string lastreceivedid = 2;               
}

message ReceiveMessageResponse {
    ChatsApp.common.MessageUser sender = 1;
    int32 groupid = 2;
    string messageid = 3;                              
    string content = 4;
    string timestamp = 5;
}

service GroupChatService {
    
    rpc LoadMessages(LoadMessageRequest) returns (LoadMessageResponse);
    
   
    rpc SendMessage(stream SendMessageRequest) returns (stream SendMessageResponse);
    
    
    rpc ReceiveMessages(stream ReceiveMessageRequest) returns (stream ReceiveMessageResponse);
}